--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -95,12 +95,10 @@ body {
     .home-template .post-feed,
     .tag-template .post-feed,
     .author-template .post-feed {
-        margin-top: -70px;
         padding-top: 0;
     }
     .home-template .site-nav {
         position: relative;
-        top: -70px;
     }
 }
 
@@ -112,8 +110,6 @@ body {
     position: relative;
     padding-top: 12px;
     padding-bottom: 12px;
-    color: #fff;
-    background: color(var(--darkgrey) l(-5%)) no-repeat center center;
     background-size: cover;
 }
 
@@ -126,7 +122,6 @@ body {
     left: 0;
     z-index: 10;
     display: block;
-    background: rgba(0,0,0,0.18);
 }
 
 .site-header:after {
@@ -138,7 +133,6 @@ body {
     left: 0;
     z-index: 10;
     display: block;
-    height: 80px;
     background: linear-gradient(rgba(0,0,0,0.1),rgba(0,0,0,0));
 }
 
@@ -152,8 +146,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 10vw 4vw;
-    min-height: 200px;
+    padding-top: 3vw;
+    padding-bottom: 3vw;
     max-height: 450px;
     text-align: center;
 }
@@ -266,7 +260,6 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
     display: block;
     margin: 0;
     padding: 10px 12px;
-    color: #fff;
     opacity: 0.8;
 }
 
@@ -308,7 +301,6 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 .social-link svg {
     height: 1.8rem;
-    fill: #fff;
 }
 
 .social-link-fb svg {
@@ -354,7 +346,6 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 .rss-button svg {
     margin-bottom: 1px;
     height: 2.1rem;
-    fill: #fff;
 }
 
 @media (max-width: 700px) {
@@ -374,6 +365,21 @@ The knock-on effect of this is ugly browser-scroll bars at the bottom, so 80px o
 
 /* 6. Post Feed
 /* ---------------------------------------------------------- */
+
+.post-card.tag-card {
+    flex: none;
+    min-height: 0;
+    margin: 0 10px 10px;
+}
+
+
+.tag-card .post-card-content-link {
+    padding: 10px;
+}
+
+.tag-card .post-card-header h2 {
+    margin: 0;
+}
 
 .post-feed {
     position: relative;
@@ -673,7 +679,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 
 .post-full-header {
     margin: 0 auto;
-    padding: 6vw 3vw 3vw;
+    padding: 6vw 3vw 1vw;
     max-width: 1040px;
     text-align: center;
 }
@@ -732,7 +738,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
 .post-full-content {
     position: relative;
     margin: 0 auto;
-    padding: 70px 100px 0;
+    padding: 0px 100px 0;
     min-height: 230px;
     font-family: Georgia, serif;
     font-size: 2.2rem;
@@ -751,7 +757,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
     }
 }
 
-.post-full-content:before {
+/* .post-full-content:before {
     content: "";
     position: absolute;
     top: 15px;
@@ -777,7 +783,7 @@ The first (most recent) post in the list is styled to be bigger than the others 
     background: rgba(39,44,49,0.15);
     filter: blur(5px);
     transform: rotate(5deg);
-}
+} */
 
 .no-image .post-full-content {
     padding-top: 0;
