--- a/index.hbs
+++ b/index.hbs
@@ -2,9 +2,9 @@
 {{!-- The tag above means: insert everything in this file
 into the {body} of the default.hbs template --}}
 
-{{!-- The big featured header, it uses blog cover image as a BG if available --}}
-<header class="site-header outer {{#if @blog.cover_image}}" style="background-image: url({{@blog.cover_image}}){{else}}no-cover{{/if}}">
+<header class="site-header outer">
     <div class="inner">
+        {{> "site-nav"}}
         <div class="site-header-content">
             <h1 class="site-title">
                 {{#if @blog.logo}}
@@ -15,7 +15,6 @@ into the {body} of the default.hbs template --}}
             </h1>
             <h2 class="site-description">{{@blog.description}}</h2>
         </div>
-        {{> "site-nav"}}
     </div>
 </header>
 
